# labs-oop

Lab 1/: CMakeLists.txt  main.cpp  palindrom_single_file.cpp
Lab 1/Problem/: palindrom.cpp  palindrom.h
Lab 1/Tests/: test_palindrom.cpp  test_palindrom.h
Lab 2/: CMakeLists.txt  main.cpp
Lab 2/Service/problems/: problems.cpp  problems.h
Lab 2/Service/tests/: tests.cpp  tests.h
Lab 2/UI/io_operations/: read_show.cpp  read_show.h
Lab 2/UI/menu/: console.cpp  console.h
Lab 3/: CMakeLists.txt  main.cpp
Lab 3/Service/problems/: problems.cpp  problems.h
Lab 3/Service/tests/: tests.cpp  tests.h
Lab 3/UI/io_operations/: read_show.cpp  read_show.h
Lab 3/UI/menu/: console.cpp  console.h
Lab 4/: CMakeLists.txt  ComplexNumber.cpp  ComplexNumber.h  main.cpp  tests.cpp
Lab 4/Domain/: complex_num.cpp  complex_num.h
Lab 4/Repository/: repository_in_memory.cpp  repository_in_memory.h
Lab 4/Tests/: tests.cpp  tests.h
Lab 4/UI/: console.cpp  console.h
Lab 7/: CMakeLists.txt  main.cpp
Lab 7 live/: CMakeLists.txt  main.cpp
Lab 7 live/Domain/: transaction.cpp  transaction.h  vector.h
Lab 7 live/Tests/: tests.cpp  (+1 more)
Lab 7/Domain/: transaction.cpp  transaction.h  vector.h
Lab 7/Domain/Entity/: transaction.cpp  transaction.h  transaction_condition.cpp  transaction_condition.h  transaction_validator.cpp  transaction_validator.h
Lab 7/Repository/: repository.h
Lab 7/Service/: transaction_service.cpp  transaction_service.h
Lab 7/Tests/: tests.h
Lab 7/UI/: menu.cpp  menu.h
Lab 9/: CMakeLists.txt  main.cpp
test_vector/: CMakeLists.txt  main.cpp
(+63 files in other folders)
